<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:timetable="http://schemas.android.com/apk/res-auto" >
    <item android:id="@+id/action_save"
          android:icon="@drawable/ic_action_save"
          android:title="@string/action_save"
          timetable:showAsAction="always"  />

    <item
        android:id="@+id/overflow1"
        android:icon="@drawable/ic_action_overflow"
        android:title="@string/action_overflow"
        timetable:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_settings1"
                android:icon="@drawable/ic_action_settings"
                android:title="@string/action_settings"
                timetable:showAsAction="never"/>
            <item
                android:id="@+id/action_help1"
                android:icon="@drawable/ic_action_help"
                android:title="@string/action_help"
                timetable:showAsAction="never"/>

            <item
                android:id="@+id/action_feedback1"
                android:icon="@drawable/ic_action_feedback"
                android:title="@string/action_feedback"
                timetable:showAsAction="never"/>
            <item
                android:id="@+id/action_about1"
                android:icon="@drawable/ic_action_about"
                android:title="@string/action_about"
                timetable:showAsAction="never"/>
        </menu>
    </item>


</menu>