<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:timetable="http://schemas.android.com/apk/res-auto"
    >



    <item
        android:id="@+id/overflow2"
        android:icon="@drawable/ic_action_overflow"
        android:title="@string/action_overflow"
        timetable:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_settings2"
                android:icon="@drawable/ic_action_settings"
                android:title="@string/action_settings"
                timetable:showAsAction="never"/>

            <item
                android:id="@+id/action_feedback2"
                android:icon="@drawable/ic_action_feedback"
                android:title="@string/action_feedback"
                timetable:showAsAction="never"/>
            <item
                android:id="@+id/action_about2"
                android:icon="@drawable/ic_action_about"
                android:title="@string/action_about"
                timetable:showAsAction="never"/>
        </menu>
    </item>

</menu>
